--- a/src/theme/base.html
+++ b/src/theme/base.html
@@ -192,7 +192,7 @@
                     {% endif %}
                   </details> 
                 {% endif %} 
-                <details><summary> Content </summary>
+                <details open><summary> Content </summary>
                   {{ page.content }}
                 </details>
                 {% if page and page.meta %}
