--- a/src/theme/404.html
+++ b/src/theme/404.html
@@ -2,7 +2,11 @@
   This file was automatically generated - do not edit
 -#}
 {% extends "main.html" %}
+{% block site_toc %}
+{% endblock %}
 {% block content %}
-  <h1>404 - Not found</h1>
+  <h1>Error 404 - File is not found</h1>
+  <h2>Below is site graph</h2>
+  <iframe type="text/html" src="/d3graph/index.html" style="height: 600px; width: 100%; overflow: hidden;" scrolling="no" height="100%" width="100%"></iframe>
 {% endblock %}
 {% block disqus %}{% endblock %}
