--- a/src/theme/main.html
+++ b/src/theme/main.html
@@ -15,7 +15,7 @@
   {% endif %}
   {% block site_toc %}
     <div class="md-sidebar md-sidebar--secondary" data-md-component="sidebar" data-md-type="toc" {{ hidden }}>    
-      <iframe type="text/html" src="/d3graph/index.html" style="background: rgba(0, 0, 0, 0.1); height: 800px; width: 100%; overflow: hidden; opacity:1" scrolling="no" height="800px" width="100%"></iframe>
+      <iframe type="text/html" src="/graph_view/d3_bounding_box/index.html" style="background: rgba(0, 0, 0, 0.1); height: 600px; width: 600px; overflow: hidden; opacity:1" scrolling="no" height="800px" width="400px"></iframe>
     </div>
   {% endblock %}
 {% endblock %}
