--- a/src/theme/d3graph/index.html
+++ b/src/theme/d3graph/index.html
@@ -18,21 +18,22 @@
 </head>
 
 <body>
-  <div id="graph" style="background: blue; height: 100%; width: 100%"></div>
-  <!-- .onNodeClick(node => window.open(`${node.url}`, '_blank')) -->
-  <script>
-    fetch('./blocks.json').then(res => res.json()).then(data => {
-      const elem = document.getElementById('graph');
+<div id="graph" style="background: blue; height: 400px; width: 400px" height="400px"; width="400px"></div>
+      <!-- .onNodeClick(node => window.open(`${node.url}`, '_blank')) -->
+      <script>
+        fetch('./blocks.json').then(res => res.json()).then(data => {
+          const elem = document.getElementById('graph');
 
-      const Graph = ForceGraph()(elem)
-        .backgroundColor('rgba(255,255,255,0.2)')
-        .nodeRelSize(6)
-        .nodeAutoColorBy('user')
-        .nodeLabel(node => `${node.user}: ${node.description}`)
-        .linkColor(() => 'rgba(255,255,255,0.2)')
-        .linkDirectionalParticles(1)
-        .onNodeClick(node => window.open(`${node.url}`, '_self'))
-        .graphData(data);
-      });
-  </script>
+          const Graph = ForceGraph()(elem)
+            .backgroundColor('rgba(255,255,255,0.2)')
+            .nodeRelSize(6)
+            .nodeAutoColorBy('user')
+            .nodeLabel(node => `${node.user}: ${node.description}`)
+            .linkColor(() => 'rgba(255,255,255,0.2)')
+            .linkDirectionalParticles(1)
+            .onNodeClick(node => window.open(`${node.url}`, '_self'))
+            .graphData(data)
+            .centerAt(200, 50, 300);
+          });
+      </script>
 </body>
