--- a/src/theme/404.html
+++ b/src/theme/404.html
@@ -5,6 +5,6 @@
 {% block site_toc %}
 {% endblock %}
 {% block content %}
-  <iframe type="text/html" src="/graph_view/d3_force_in_box/index.html" style="height: 400px; width: 400px; overflow: hidden;" scrolling="no" height="100%" width="100%"></iframe>
+  <iframe type="text/html" src="/graph_view/d3_force_in_box/index.html" style="height: 100%; width: 100%; overflow: hidden;" scrolling="no" height="100%" width="100%"></iframe>
 {% endblock %}
 {% block disqus %}{% endblock %}
