--- a/src/theme/main.html
+++ b/src/theme/main.html
@@ -67,6 +67,46 @@
   {% endif %}
 {% endblock %}
 -#}
+
+{% block backlinks %}
+  {% if page.meta.backlinks|length %}
+    <details open><summary> Mentioned in </summary>
+      {% for backlink in page.meta.backlinks %}
+        - <a href="https://omegakid1902.github.io/{{ backlink }}">{{ backlink.split("/")[-1] }}</a><br>
+      {% endfor %}
+    </details> 
+  {% endif %} 
+{% endblock %}
+
+{% block yaml_header %}
+  {% if page.meta.tags|length or page.meta.created  %}
+    <details open><summary> Page detail </summary>
+      {% if page.meta.tags %}
+        tags: <br>
+        {% for tag in page.meta.tags %}
+          - <a href="/tags.html#{{ tag.strip('#').replace('/', '').lower() }}">{{ tag.strip('#').replace("/", "-") }}</a><br>
+        {% endfor %}
+        {% if '#permanent/people' in page.meta.tags %}
+          sinh mất: 
+          {% if not page.meta.birth %} 
+            (n/a - 
+          {% else %}
+            ({{ page.meta.birth }} - 
+          {% endif %}
+          {% if not page.meta.death %} 
+            n/a)
+          {% else %}
+            {{ page.meta.death }})
+          {% endif %}
+        {% endif %}
+      {% endif %}
+      {% if page.meta.created %}
+        created: {{ page.meta.created }}
+      {% endif %}
+    </details> 
+  {% endif %} 
+{% endblock %}
+
 {% block disqus %}
   <div id="disqus_thread"></div>
   <script>
